--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,10 @@ ul li {
 
 
 @media (max-width: 768px) {
+  .container {
+    padding-top: 50px;
+  }
+
   .layout {
     flex-direction: column;
   }
@@ -286,6 +290,9 @@ ul li {
 }
 
 @media (max-width: 480px) {
+  .container {
+    padding-top: 60px;
+  }
   .card-content h3 {
     font-size: 1.2em; 
   }
